<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014. CodeBoyTeam
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fadingEdge="none"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_post_headline_title"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/question_pub_title"
                style="@style/EditTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/publish_post_input_title_hint"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/publish_post_headline_category"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/question_pub_catalog"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/post_pub_options" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_post_headline_question"
            android:textColor="@color/theme_green" />

        <EditText
            android:id="@+id/question_pub_content"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:autoLink="web"
            android:gravity="top"
            android:hint="@string/publish_post_input_question_hint"
            android:lines="5" />

        <CheckBox
            android:id="@+id/question_pub_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginTop="10dip"
            android:text="@string/publish_post_email_notify"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>