<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014. CodeBoyTeam
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_info_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    android:fadingEdge="none"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15.0dip" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/user_info_userface"
                android:layout_width="72dip"
                android:layout_height="72dip"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/default_avatar" />

            <ImageView
                android:id="@+id/user_info_gender"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignBottom="@id/user_info_userface"
                android:layout_marginLeft="10.0dip"
                android:layout_toRightOf="@id/user_info_userface"
                android:scaleType="fitCenter"
                android:src="@drawable/widget_gender_man" />

            <TextView
                android:id="@+id/user_info_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/user_info_gender"
                android:layout_alignLeft="@id/user_info_gender"
                android:layout_marginBottom="10.0dip"
                android:textColor="@color/author_text"
                android:textSize="@dimen/text_size_18" />

            <Button
                android:id="@+id/user_info_editer"
                style="@style/GreenButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:text="@string/userinfo_edit_avatar" />
        </RelativeLayout>

        <!-- 收藏 -->

        <LinearLayout
            android:id="@+id/user_info_favorites_ll"
            style="@style/UserInfoLayoutStyle"
            android:layout_marginTop="10dip"
            android:background="@drawable/table_above_bg" >

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_favorites" />

            <TextView
                android:id="@+id/user_info_favorites"
                style="@style/UserInfoRightText2Style" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:src="@drawable/widget_right_icon" />
        </LinearLayout>

        <!-- 关注 -->

        <LinearLayout
            android:id="@+id/user_info_followers_ll"
            style="@style/UserInfoLayoutStyle"
            android:background="@drawable/table_mid_bg" >

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_followers" />

            <TextView
                android:id="@+id/user_info_followers"
                style="@style/UserInfoRightText2Style" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:src="@drawable/widget_right_icon" />
        </LinearLayout>

        <!-- 粉丝 -->

        <LinearLayout
            android:id="@+id/user_info_fans_ll"
            style="@style/UserInfoLayoutStyle"
            android:background="@drawable/table_below_bg" >

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_fans" />

            <TextView
                android:id="@+id/user_info_fans"
                style="@style/UserInfoRightText2Style" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:src="@drawable/widget_right_icon" />
        </LinearLayout>

        <!-- 加入时间 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle"
            android:layout_marginTop="10dip"
            android:background="@drawable/table_above_bg" >

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_join_time" />

            <TextView
                android:id="@+id/user_info_jointime"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 所在地区 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle"
            android:background="@drawable/table_mid_bg" >

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_area" />

            <TextView
                android:id="@+id/user_info_from"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 开发平台 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle"
            android:background="@drawable/table_mid_bg" >

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_dev_platform" />

            <TextView
                android:id="@+id/user_info_devplatform"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 专长领域 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle"
            android:background="@drawable/table_below_bg" >

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_expertise" />

            <TextView
                android:id="@+id/user_info_expertise"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 注销登录 -->
        <Button
            android:id="@+id/user_info_logout"
            style="@style/RedButtonStyle"
            android:layout_marginTop="20dip"
            android:minHeight="45dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_logout" />
    </LinearLayout>

</ScrollView>